...
        android:gravity="center"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:text="Enter Credentials" />

    <EditText
        android:id="@+id/person_name"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Name"
        android:ems="20"
        android:textColor="@color/white"
        android:textColorHint="@color/purple_200"
        android:layout_margin="7dp"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email Address"
        android:ems="10"
        android:textColor="@color/white"
        android:textColorHint="@color/purple_200"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:backgroundTint="@color/confirm"
            android:text="Sign Up!" />
    </LinearLayout>

</LinearLayout>
